--- a/package.json
+++ b/package.json
@@ -6,17 +6,12 @@
     "node": ">=14"
   },
   "scripts": {
-    "start": "npm run serve",
+    "start": "node ./bin/www",
     "serve": "nodemon ./bin/www",
     "debug": "nodemon --inspect ./bin/www",
-    "lint": "npm run lint:quiet",
-    "lint:quiet": "eslint --quiet './**/*.js'",
-    "lint:all": "eslint './**/*.js'",
-    "lint:fix": "eslint './**/*.js' --quiet --fix",
-    "test:nocoverage": "ava",
-    "test:withcoverage": "nyc ava",
-    "test": "npm run test:withcoverage",
-    "gendoc": "apidoc -i routes/ -o public/docs"
+    "lint": "eslint --ext .js,.jsx .",
+    "pretest": "npm run lint",
+    "test": "cross-env NODE_ENV=development nyc --reporter=lcov --reporter=text mocha --timeout 10000 --exit"
   },
   "keywords": [
     "express",
@@ -32,7 +27,7 @@
     "url": "https://github.com/LogicSquare-1996/Node-JS-Scalaton.git"
   },
   "dependencies": {
-    "agenda": "^4.2.1",
+    "agenda": "^3.1.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -46,24 +41,26 @@
     "helmet": "^5.0.2",
     "http-errors": "~1.6.3",
     "mongodb-memory-server": "^8.4.1",
-    "mongoose": "^6.2.6",
+    "mongoose": "^5.10.15",
     "morgan": "~1.9.1",
-    "randomstring": "^1.2.2"
+    "randomstring": "^1.1.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "eslintIgnore": [
     "public/",
     "bin/"
   ],
   "devDependencies": {
-    "apidoc": "^0.17.7",
     "ava": "^4.1.0",
-    "eslint": "^8.10.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "faker": "^6.6.6",
-    "husky": "^7.0.4",
+    "husky": "^4.3.0",
     "nodemon": "^2.0.15",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "chai": "^4.2.0"
   },
   "husky": {
     "hooks": {
